project/logs/20250624_112250.log
Using adapter: NVIDIA GeForce RTX 4060 Laptop GPU

Feature Level: 12.2

Complete create D3D12Device!
Begin CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Qembed_debug:3:5: error: unknown type name 'float32_t4t4'
    float32_t4t4 WVP;
    ^

Complete CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Begin CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

Complete CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

